<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/conjTable"
        android:layout_width="380dp"
        android:layout_height="470dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.296"
        android:stretchColumns="*">

        <!-- The table header -->
        <TableRow
            android:id="@+id/titleRow"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/aTitle"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/aTitle"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/bTitle"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/bTitle"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/abTitle"
                android:gravity="center"
                android:text="@string/abTitle"
                android:textSize="25sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/firstCon"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/firstLeft"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/trueText"
                android:textSize="25sp"

                />

            <TextView
                android:id="@+id/firstRight"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/trueText"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/firstAnswer"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:id="@+id/secndCon"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/secndLeft"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/trueText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/secndRight"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/falseText"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/secndAnswer"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:id="@+id/thirdCon"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/thirdLeft"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/falseText"

                android:textSize="25sp" />

            <TextView
                android:id="@+id/thirdRight"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/trueText"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/thirdAnswer"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:id="@+id/fourthCon"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/fourthLeft"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/falseText"

                android:textSize="25sp" />

            <TextView
                android:id="@+id/fourthRight"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/falseText"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/fourthAnswer"
                android:gravity="center" />

        </TableRow>



    </TableLayout>

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/checkBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjTable" />

</androidx.constraintlayout.widget.ConstraintLayout>